* Added Picasso disk cache lib

--- a/px-checkout/build.gradle
+++ b/px-checkout/build.gradle
@@ -44,13 +44,13 @@ dependencies {
     implementation project(':px-addons')
 
     implementation "com.google.code.gson:gson:$gson"
-    implementation "com.squareup.picasso:picasso:$picasso"
     implementation "com.mercadolibre.android:ui:$meli_ui_lib"
     implementation "com.mercadolibre.android:carddrawer:$meli_card_drawer"
     implementation "com.mercadolibre.android.mlbusinesscomponents:mlbusinesscomponents:$mlbusinesscomponents"
     implementation("com.mercadolibre.android:cardform:$cardform") {
         exclude group:'com.mercadopago.android.px', module:'addons'
     }
+    implementation "com.mercadolibre.android:picasso-disk-cache:$picassoDiskCache"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
