--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,6 @@ mockito_version=2.15.0
 mercado_pago_services=1.0.3
 retrofit=2.4.0
 retrofit_coroutines=0.9.2
-picasso=2.5.2
 leak_cannary=1.5.4
 meli_ui_lib=8.+
 meli_card_drawer=2.+
@@ -29,6 +28,7 @@ flexbox_layout=1.0.0
 multidex=1.0.3
 mlbusinesscomponents=1.+
 cardform=1.+
+picassoDiskCache=1.+
 # test dependencies
 spoon_client=1.7.1
 espresso=3.0.1
