--- a/px-checkout/build.gradle
+++ b/px-checkout/build.gradle
@@ -18,8 +18,8 @@ android {
 dependencies {
     androidTestImplementation project(':testlib')
 
-    testImplementation "junit:junit:$junit"
-    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "org.powermock:powermock-api-mockito2:$power_mock"
+    testImplementation "org.powermock:powermock-module-junit4:$power_mock"
 
     implementation "com.android.support:multidex:$multidex"
     implementation "com.android.support:cardview-v7:$support_library_version"
