--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,6 @@ lifecycle_version=1.1.1
 support_library_version=28.0.0
 okhttp=3.11.0
 gson=2.8.2
-mockito_version=2.15.0
 mercado_pago_services=1.0.3
 retrofit=2.4.0
 retrofit_coroutines=0.9.2
@@ -32,7 +31,7 @@ picassoDiskCache=1.+
 # test dependencies
 spoon_client=1.7.1
 espresso=3.0.1
-mockito=1.10.19
+power_mock=2.0.2
 android_runner=1.0.1
 junit=4.12
 stetho=1.5.0
