--- a/px-checkout/build.gradle
+++ b/px-checkout/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "android.arch.lifecycle:livedata-core:$lifecycle_version"
     implementation "android.arch.lifecycle:viewmodel:$lifecycle_version"
+    testImplementation "android.arch.core:core-testing:$lifecycle_version"
 }
