--- a/px-checkout/src/main/AndroidManifest.xml
+++ b/px-checkout/src/main/AndroidManifest.xml
@@ -17,21 +17,24 @@
         <activity
             android:name=".internal.features.payment_methods.PaymentMethodsActivity"
             android:label="@string/px_title_activity_payment_methods"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.bank_deals.BankDealsActivity"
             android:label="@string/px_title_activity_bank_deals"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.TermsAndConditionsActivity"
             android:label="@string/px_title_activity_terms_and_conditions"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.checkout.CheckoutActivity"
             android:label=""
             android:windowSoftInputMode="adjustResize"
             android:launchMode="singleTask"
-            android:screenOrientation="locked"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar">
 
             <intent-filter>
@@ -64,24 +67,29 @@
             android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".internal.features.payment_vault.PaymentVaultActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.installments.InstallmentsActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.IssuersActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.cardvault.CardVaultActivity"
-            android:screenOrientation="locked"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.ErrorActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.payment_result.PaymentResultActivity"
             android:label=""
-            android:theme="@style/ToolbarTransparentTheme"/>
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.SecurityCodeActivity"
             android:screenOrientation="sensorPortrait"
@@ -90,31 +98,40 @@
             android:windowSoftInputMode="stateVisible"/>
         <activity
             android:name=".internal.features.PaymentTypesActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.review_payment_methods.ReviewPaymentMethodsActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.payer_information.PayerInformationActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.plugins.PaymentProcessorActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.business_result.BusinessPaymentResultActivity"
             android:label=""
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.review_and_confirm.ReviewAndConfirmActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.bank_deal_detail.BankDealDetailActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.MercadoPagoTheme.NoActionBar"/>
         <activity
             android:name=".internal.features.guessing_card.card_association_result.CardAssociationResultSuccessActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/ToolbarTransparentTheme"/>
         <activity
             android:name=".internal.features.guessing_card.card_association_result.CardAssociationResultErrorActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/ToolbarTransparentTheme"/>
 
         <provider
