Fix deploy script crash with no version name

--- a/gradle/deploy_base.gradle
+++ b/gradle/deploy_base.gradle
@@ -46,7 +46,11 @@ task publishAar {
 
 task printLastVersion {
     doLast {
-        println file(versionLocation).text
+        try {
+            println file(versionLocation).text
+        } catch(Exception e) {
+            //nothing to do here
+        }
     }
 }
 
