[Feature] experiment installments row (#2184)
* init pulse view

* circle arrow added

* background added by android version

* pulse animation

* version resources added

* refactor badge experiment

* refactor experiment helper

* has_interest_free and has_reimbursement extra_info added

* unused classes are removed

* refactor payment method descriptor

* revert changes

* refactor checkout service

* resources removed

* refactor variant type, variant handler added

* vector drawable support added

* resolve test

* refactoring methods

* srcCompat added for pulse image view

* refactor availableMethod builder

* vector consumer credits refactor

* refactor CardExtraExpress, resolve test

--- a/px-checkout/build.gradle
+++ b/px-checkout/build.gradle
@@ -8,6 +8,7 @@ apply plugin:'kotlin-android-extensions'
 android {
     defaultConfig {
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
     kotlinOptions {
         jvmTarget = "1.8"
