--- a/px-services/build.gradle
+++ b/px-services/build.gradle
@@ -12,8 +12,8 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField "String", "API_ENVIRONMENT", "\"beta\""
-            buildConfigField "String", "API_ENVIRONMENT_NEW", "\"beta\""
+            buildConfigField "String", "API_ENVIRONMENT", "\"production\""
+            buildConfigField "String", "API_ENVIRONMENT_NEW", "\"production\""
             buildConfigField "boolean", "HTTP_CLIENT_LOG", "true"
         }
 
