* enabled r8 full mode in test app
(cherry picked from commit fee4e653116b04f58f314e4f9f8cc8896fd3d53c)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+android.enableR8=true
+android.enableR8.fullMode=true
 # Project build optimizations
 org.gradle.parallel=true
 org.gradle.daemon=true
