--- a/px-checkout/src/main/AndroidManifest.xml
+++ b/px-checkout/src/main/AndroidManifest.xml
@@ -133,6 +133,7 @@
             android:name=".internal.features.guessing_card.card_association_result.CardAssociationResultErrorActivity"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/ToolbarTransparentTheme"/>
+        <activity android:name=".internal.features.dummy_result.DummyResultActivity"/>
 
         <provider
             android:name=".internal.di.PxCheckoutInitProvider"
