--- a/px-checkout/build.gradle
+++ b/px-checkout/build.gradle
@@ -19,6 +19,9 @@ android {
             initWith debug
         }
     }
+    testOptions {
+        unitTests.includeAndroidResources true
+    }
 }
 
 dependencies {
@@ -26,6 +29,7 @@ dependencies {
 
     testImplementation "org.powermock:powermock-api-mockito2:$power_mock"
     testImplementation "org.powermock:powermock-module-junit4:$power_mock"
+    testImplementation "org.robolectric:robolectric:$robolectric"
 
     implementation "com.android.support:multidex:$multidex"
     implementation "com.android.support:cardview-v7:$support_library_version"
