--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,7 @@ multidex=1.0.3
 mlbusinesscomponents=1.+
 cardform=1.+
 picassoDiskCache=1.+
+andes_ui=2.+
 # test dependencies
 spoon_client=1.7.1
 espresso=3.0.1
