--- a/px-checkout/build.gradle
+++ b/px-checkout/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation "com.android.support:support-annotations:$support_library_version"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout"
     implementation "com.google.android:flexbox:$flexbox_layout"
+    implementation "com.mercadolibre.android.andesui:components:$andes_ui"
 
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
     implementation "com.squareup.okhttp3:okhttp-urlconnection:$okhttp"
