--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ appcompat=1.0.0
 card_view=1.0.0
 recycler_view=1.1.0
 material=1.0.0
+view_pager_2=1.0.0
 lifecycle=2.0.0
 constraint_layout=1.1.3
 flexbox_layout=1.1.1
