--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ retrofit=2.4.0
 retrofit_coroutines=0.9.2
 leak_cannary=1.5.4
 meli_ui_lib=8.+
-meli_card_drawer=2.+
+meli_card_drawer=2.6.0
 constraint_layout=1.1.3
 flexbox_layout=1.0.0
 multidex=1.0.3
