--- a/gradle.properties
+++ b/gradle.properties
@@ -10,39 +10,43 @@ org.gradle.jvmargs=-Xmx1g
 # Current lib version
 version_to_deploy=4.56.1
 # Compile versions
-build_tools_version=29.0.2
-min_api_level=19
-api_level=29
-gradle_plugin_version=3.4.2
-kotlin_coroutines_version=1.2.2
-kotlin_version=1.3.40
+buildTools=29.0.2
+minApiLevel=19
+apiLevel=29
+gradlePlugin=3.4.2
+kotlinCoroutines=1.2.2
+kotlin=1.3.40
 # Android core libs
 appcompat=1.0.0
-card_view=1.0.0
-recycler_view=1.1.0
+cardView=1.0.0
+recyclerView=1.1.0
 material=1.0.0
 lifecycle=2.0.0
-constraint_layout=1.1.3
-flexbox_layout=1.1.1
+constraintLayout=1.1.3
+flexboxLayout=1.1.1
 multidex=2.0.1
 # Other libs
 okhttp=3.12.10
 gson=2.8.5
 retrofit=2.6.4
 # Other PX libs
-meli_card_drawer=2.+
-mlbusinesscomponents=1.+
-cardform=1.+
+cardDrawer=2.+
+businessComponents=1.+
+cardForm=1.+
 picassoDiskCache=1.+
 # ML libs
-meli_ui_lib=8.+
-andes_ui=2.+
+andesUi=2.+
+ui=8.+
 # test dependencies
-leak_canary=2.4
-spoon_client=1.7.1
-espresso=3.1.0
-power_mock=2.0.2
+leakCanary=2.4
+powerMock=2.0.2
 robolectric=4.3.1
 junit=4.13
 stetho=1.5.1
-android_runner=1.1.1
+androidTestJunit=1.1.1
+androidTestEspresso=3.2.0
+androidTestCore=1.2.0
+jacoco=0.8.5
+bintray=1.8.4
+maven=2.1
+staticCodeAnalysis=3.2.0
