--- a/px-addons/build.gradle
+++ b/px-addons/build.gradle
@@ -14,9 +14,9 @@ android {
 }
 
 dependencies {
-    testImplementation "org.powermock:powermock-module-junit4:$power_mock"
-    testImplementation "org.powermock:powermock-api-mockito2:$power_mock"
+    testImplementation "org.powermock:powermock-module-junit4:$powerMock"
+    testImplementation "org.powermock:powermock-api-mockito2:$powerMock"
 
     implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin"
 }
