--- a/px-checkout/build.gradle
+++ b/px-checkout/build.gradle
@@ -27,18 +27,18 @@ android {
 dependencies {
     androidTestImplementation project(':testlib')
 
-    testImplementation "org.powermock:powermock-api-mockito2:$power_mock"
-    testImplementation "org.powermock:powermock-module-junit4:$power_mock"
+    testImplementation "org.powermock:powermock-api-mockito2:$powerMock"
+    testImplementation "org.powermock:powermock-module-junit4:$powerMock"
     testImplementation "org.robolectric:robolectric:$robolectric"
 
     implementation "androidx.multidex:multidex:$multidex"
-    implementation "androidx.cardview:cardview:$card_view"
-    implementation "androidx.recyclerview:recyclerview:$recycler_view"
+    implementation "androidx.cardview:cardview:$cardView"
+    implementation "androidx.recyclerview:recyclerview:$recyclerView"
     implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "com.google.android.material:material:$material"
-    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
-    implementation "com.google.android:flexbox:$flexbox_layout"
-    implementation "com.mercadolibre.android.andesui:components:$andes_ui"
+    implementation "com.mercadolibre.android.andesui:components:$andesUi"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
+    implementation "com.google.android:flexbox:$flexboxLayout"
 
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
     implementation "com.squareup.okhttp3:okhttp-urlconnection:$okhttp"
@@ -52,16 +52,16 @@ dependencies {
     implementation project(':px-addons')
 
     implementation "com.google.code.gson:gson:$gson"
-    implementation "com.mercadolibre.android:ui:$meli_ui_lib"
-    implementation "com.mercadolibre.android:carddrawer:$meli_card_drawer"
-    implementation "com.mercadolibre.android.mlbusinesscomponents:mlbusinesscomponents:$mlbusinesscomponents"
-    implementation("com.mercadolibre.android:cardform:$cardform") {
+    implementation "com.mercadolibre.android:ui:$ui"
+    implementation "com.mercadolibre.android:carddrawer:$cardDrawer"
+    implementation "com.mercadolibre.android.mlbusinesscomponents:mlbusinesscomponents:$businessComponents"
+    implementation("com.mercadolibre.android:cardform:$cardForm") {
         exclude group:'com.mercadopago.android.px', module:'addons'
     }
     implementation "com.mercadolibre.android:picasso-disk-cache:$picassoDiskCache"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutines"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-livedata-core:$lifecycle"
