--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ subprojects {
     }
 }
 
+wrapper {
+    gradleVersion = 6.6
+    distributionType = Wrapper.DistributionType.BIN
+}
+
 // Aggregate javadoc task
 rootProject.gradle.projectsEvaluated {
     task javadoc(type:Javadoc) { Javadoc self ->
