--- a/gradle.properties
+++ b/gradle.properties
@@ -13,15 +13,15 @@ version_to_deploy=4.69.0
 buildTools=29.0.2
 minApiLevel=19
 apiLevel=29
-gradlePlugin=3.4.2
-kotlinCoroutines=1.2.2
-kotlin=1.3.40
+gradlePlugin=3.6.3
+kotlinCoroutines=1.3.0
+kotlin=1.3.71
 # Android core libs
-appcompat=1.0.0
+appcompat=1.0.2
 cardView=1.0.0
 recyclerView=1.1.0
 material=1.0.0
-lifecycle=2.0.0
+lifecycle=2.2.0
 constraintLayout=1.1.3
 flexboxLayout=1.1.1
 multidex=2.0.1
@@ -36,17 +36,18 @@ cardForm=1.+
 picassoDiskCache=1.+
 # ML libs
 andesUi=2.+
-ui=8.+
+ui=9.+
 # test dependencies
 leakCanary=2.4
 powerMock=2.0.2
 robolectric=4.3.1
 junit=4.13
 stetho=1.5.1
-androidTestJunit=1.1.1
-androidTestEspresso=3.2.0
-androidTestCore=1.2.0
-jacoco=0.8.5
+androidTestArch=2.1.0
+androidTestJunit=1.1.2
+androidTestEspresso=3.3.0
+androidTestCore=1.3.0
+jacoco=0.8.6
 bintray=1.8.4
 maven=2.1
 staticCodeAnalysis=3.2.0
