--- a/px-services/build.gradle
+++ b/px-services/build.gradle
@@ -13,7 +13,7 @@ android {
     buildTypes {
         debug {
             buildConfigField "String", "API_ENVIRONMENT", "\"v1\""
-            buildConfigField "String", "API_ENVIRONMENT_NEW", "\"alpha\""
+            buildConfigField "String", "API_ENVIRONMENT_NEW", "\"production\""
             buildConfigField "boolean", "HTTP_CLIENT_LOG", "true"
         }
 
